--- a/css/screen.css
+++ b/css/screen.css
@@ -77,3 +77,17 @@ input.search-query {
     color: black;
     z-index: 1100;
 }
+
+#find-nearest {
+    position: absolute;
+    top: 70px;
+    left: 50px;
+    padding: .5em 1em;
+    background-color: #fff;
+    font-size: 1.2em;
+    border:0;
+    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+    border-radius: 4px;
+    color: black;
+    z-index: 1100;
+}
